--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
+    "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.14",
+    "@mui/x-date-pickers-pro": "^7.1.0",
+    "@reduxjs/toolkit": "^2.2.2",
     "antd": "^5.15.3",
     "axios": "^1.6.8",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
